// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountStatus does not render edit details when no account link 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 3);
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-8 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-10 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-10:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-10:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 3);
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  width: 100%;
}

.emotion-12>* {
  min-width: 0;
}

.emotion-24 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

.emotion-26 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-26 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-flex components-card__header components-card-header woocommerce-account-status__header emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        <div
          class="components-flex-item account-details emotion-6 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Account details
        </div>
        <div
          class="components-flex-item components-flex-block account-status emotion-8 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexBlock"
        >
          <span
            class="chip chip-success"
          >
            Complete
          </span>
        </div>
      </div>
      <div
        class="components-card__body components-card-body emotion-10 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="components-flex woocommerce-account-status-item emotion-12 emotion-1"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item item-label emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            Payments:
          </div>
          <div
            class="components-flex-item components-flex-block item-value emotion-8 emotion-1"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
          >
            <span
              class="account-status__info__green"
            >
              <svg
                class="gridicon gridicons-checkmark-circle"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658A9.98 9.98 0 0012 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10a9.94 9.94 0 00-.966-4.266L11 17.768z"
                  />
                </g>
              </svg>
              Enabled
            </span>
          </div>
        </div>
        <div
          class="components-flex woocommerce-account-status-item emotion-12 emotion-1"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item item-label emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            Payouts:
          </div>
          <div
            class="components-flex-item components-flex-block item-value emotion-8 emotion-1"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
          >
            <span
              class="account-status__info__green"
            >
              <svg
                class="gridicon gridicons-checkmark-circle"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658A9.98 9.98 0 0012 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10a9.94 9.94 0 00-.966-4.266L11 17.768z"
                  />
                </g>
              </svg>
              Automatic
            </span>
          </div>
        </div>
        <div
          class="account-fees"
        >
          <hr
            aria-orientation="horizontal"
            class="components-divider components-card__divider components-card-divider emotion-24 emotion-25"
            data-wp-c16t="true"
            data-wp-component="CardDivider"
            role="separator"
          />
          <h4>
            Active discounts
          </h4>
        </div>
        <p>
          Card transactions
          :
        </p>
        Euro 
        (EUR) 
        <s>
          2.9% + 0,00 € per transaction
        </s>
         2.9% + 0,30 € per transaction
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-26 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-26 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`AccountStatus renders account tools 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 3);
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-8 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-12:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-12:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 3);
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  width: 100%;
}

.emotion-14>* {
  min-width: 0;
}

.emotion-26 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

.emotion-30 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-30 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-flex components-card__header components-card-header woocommerce-account-status__header emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        <div
          class="components-flex-item account-details emotion-6 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Account details
        </div>
        <div
          class="components-flex-item components-flex-block account-status emotion-8 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexBlock"
        >
          <span
            class="chip chip-success"
          >
            Complete
          </span>
        </div>
        <div
          class="components-flex-item edit-details emotion-6 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <a
            class="components-button is-next-40px-default-size is-link"
            href="https://stripe.example.com/account?from=WCPAY_ACCOUNT_DETAILS&source=wcpay-account-details"
            target="_blank"
          >
            Edit details
          </a>
        </div>
      </div>
      <div
        class="components-card__body components-card-body emotion-12 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="components-flex woocommerce-account-status-item emotion-14 emotion-1"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item item-label emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            Payments:
          </div>
          <div
            class="components-flex-item components-flex-block item-value emotion-8 emotion-1"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
          >
            <span
              class="account-status__info__green"
            >
              <svg
                class="gridicon gridicons-checkmark-circle"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658A9.98 9.98 0 0012 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10a9.94 9.94 0 00-.966-4.266L11 17.768z"
                  />
                </g>
              </svg>
              Enabled
            </span>
          </div>
        </div>
        <div
          class="components-flex woocommerce-account-status-item emotion-14 emotion-1"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item item-label emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            Payouts:
          </div>
          <div
            class="components-flex-item components-flex-block item-value emotion-8 emotion-1"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
          >
            <span
              class="account-status__info__green"
            >
              <svg
                class="gridicon gridicons-checkmark-circle"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658A9.98 9.98 0 0012 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10a9.94 9.94 0 00-.966-4.266L11 17.768z"
                  />
                </g>
              </svg>
              Automatic
            </span>
          </div>
        </div>
        <div
          class="account-tools"
        >
          <hr
            aria-orientation="horizontal"
            class="components-divider components-card__divider components-card-divider emotion-26 emotion-27"
            data-wp-c16t="true"
            data-wp-component="CardDivider"
            role="separator"
          />
          <h4>
            Account Tools
          </h4>
          <p>
            Payments and payouts are disabled until account setup is completed. If you are experiencing problems completing account setup, or need to change the email/country associated with your account, you can reset your account and start from the beginning.
          </p>
          <div
            class="account-tools__actions"
          >
            <button
              class="components-button is-next-40px-default-size is-secondary"
              type="button"
            >
              Reset account
            </button>
          </div>
        </div>
        <div
          class="account-fees"
        >
          <hr
            aria-orientation="horizontal"
            class="components-divider components-card__divider components-card-divider emotion-26 emotion-27"
            data-wp-c16t="true"
            data-wp-component="CardDivider"
            role="separator"
          />
          <h4>
            Active discounts
          </h4>
        </div>
        <p>
          Card transactions
          :
        </p>
        Euro 
        (EUR) 
        <s>
          2.9% + 0,00 € per transaction
        </s>
         2.9% + 0,30 € per transaction
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-30 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-30 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`AccountStatus renders error status 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 3);
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-6:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-6:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-8 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-8 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-flex components-card__header components-card-header woocommerce-account-status__header emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        Account details
      </div>
      <div
        class="components-card__body components-card-body emotion-6 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        Error determining the connection status.
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-8 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-8 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`AccountStatus renders normal status 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 3);
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-8 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-12:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-12:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 3);
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  width: 100%;
}

.emotion-14>* {
  min-width: 0;
}

.emotion-26 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

.emotion-28 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-28 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-flex components-card__header components-card-header woocommerce-account-status__header emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        <div
          class="components-flex-item account-details emotion-6 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Account details
        </div>
        <div
          class="components-flex-item components-flex-block account-status emotion-8 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexBlock"
        >
          <span
            class="chip chip-success"
          >
            Complete
          </span>
        </div>
        <div
          class="components-flex-item edit-details emotion-6 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <a
            class="components-button is-next-40px-default-size is-link"
            href="https://stripe.example.com/account?from=WCPAY_ACCOUNT_DETAILS&source=wcpay-account-details"
            target="_blank"
          >
            Edit details
          </a>
        </div>
      </div>
      <div
        class="components-card__body components-card-body emotion-12 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="components-flex woocommerce-account-status-item emotion-14 emotion-1"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item item-label emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            Payments:
          </div>
          <div
            class="components-flex-item components-flex-block item-value emotion-8 emotion-1"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
          >
            <span
              class="account-status__info__green"
            >
              <svg
                class="gridicon gridicons-checkmark-circle"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658A9.98 9.98 0 0012 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10a9.94 9.94 0 00-.966-4.266L11 17.768z"
                  />
                </g>
              </svg>
              Enabled
            </span>
          </div>
        </div>
        <div
          class="components-flex woocommerce-account-status-item emotion-14 emotion-1"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item item-label emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            Payouts:
          </div>
          <div
            class="components-flex-item components-flex-block item-value emotion-8 emotion-1"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
          >
            <span
              class="account-status__info__green"
            >
              <svg
                class="gridicon gridicons-checkmark-circle"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658A9.98 9.98 0 0012 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10a9.94 9.94 0 00-.966-4.266L11 17.768z"
                  />
                </g>
              </svg>
              Automatic
            </span>
          </div>
        </div>
        <div
          class="account-fees"
        >
          <hr
            aria-orientation="horizontal"
            class="components-divider components-card__divider components-card-divider emotion-26 emotion-27"
            data-wp-c16t="true"
            data-wp-component="CardDivider"
            role="separator"
          />
          <h4>
            Active discounts
          </h4>
        </div>
        <p>
          Card transactions
          :
        </p>
        Euro 
        (EUR) 
        <s>
          2.9% + 0,00 € per transaction
        </s>
         2.9% + 0,30 € per transaction
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-28 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-28 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`StatusChip renders complete status 1`] = `
<div>
  <span
    class="chip chip-success"
  >
    Complete
  </span>
</div>
`;

exports[`StatusChip renders enabled status 1`] = `
<div>
  <span
    class="chip chip-primary"
  >
    Enabled
  </span>
</div>
`;

exports[`StatusChip renders partially restricted status 1`] = `
<div>
  <span
    class="chip chip-warning"
  >
    Restricted partially
  </span>
</div>
`;

exports[`StatusChip renders pending verification status 1`] = `
<div>
  <button
    class="wcpay-tooltip__content-wrapper"
    type="button"
  >
    <div
      class="wcpay-tooltip__content-wrapper"
    >
      <span
        class="chip chip-light"
      >
        Pending
      </span>
    </div>
  </button>
</div>
`;

exports[`StatusChip renders rejected status 1`] = `
<div>
  <span
    class="chip chip-light"
  >
    Rejected
  </span>
</div>
`;

exports[`StatusChip renders restricted soon status 1`] = `
<div>
  <span
    class="chip chip-warning"
  >
    Restricted soon
  </span>
</div>
`;

exports[`StatusChip renders restricted status 1`] = `
<div>
  <span
    class="chip chip-alert"
  >
    Restricted
  </span>
</div>
`;

exports[`StatusChip renders under review status 1`] = `
<div>
  <span
    class="chip chip-light"
  >
    Under review
  </span>
</div>
`;

exports[`StatusChip renders unknown status 1`] = `
<div>
  <span
    class="chip chip-light"
  >
    Unknown
  </span>
</div>
`;
